--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="player">
-        <video id="video" class="player__video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
+        <video id="video" class="player__video" src="https://www.w3schools.com/html/mov_bbb.mp4" preload="metadata"></video>
         <div class="player__controls">
-            <button id="player__button" class="player__button">►</button>
+            <button id="player__button" class="player__button toggle">►</button>
             <button id="rewind" class="player__button">« 10s</button>
             <button id="fastforward" class="player__button">25s »</button>
             <input type="range" id="volume" class="player__slider" min="0" max="1" step="0.05" value="0.75">
