--- a/main.html
+++ b/main.html
@@ -8,18 +8,24 @@
 </head>
 <body>
     <div class="player">
-        <video id="video" class="player__video" src="https://www.w3schools.com/html/mov_bbb.mp4" preload="metadata"></video>
-        <div class="player__controls">
-            <button id="player__button" class="player__button toggle">►</button>
-            <button id="rewind" class="player__button">« 10s</button>
-            <button id="fastforward" class="player__button">25s »</button>
-            <input type="range" id="volume" class="player__slider" min="0" max="1" step="0.05" value="0.75">
-            <input type="range" id="playbackSpeed" class="player__slider" min="0.5" max="2" step="0.1" value="1">
+        <video id="video" src="(link unavailable)"></video>
+        <div class="controls">
             <div class="progress">
-                <div id="progress__filled" class="progress__filled"></div>
+                <div class="progress__filled" id="progress-filled"></div>
             </div>
+            <button class="player__button" id="play-pause">►</button>
+            <input type="range" id="volume" min="0" max="1" value="0.75" step="0.01">
+            <label for="volume">Volume</label>
+            <input type="range" id="playbackSpeed" min="0.5" max="2" value="1" step="0.1">
+            <label for="playbackSpeed">Speed</label>
+            <button class="skip-button" id="rewind">« 10s</button>
+            <button class="skip-button" id="forward">25s »</button>
         </div>
     </div>
-    <script src="script.js"></script>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
+
+
+
